[package]
name = "aoc2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
intervaltree = "0.2.7"
itertools = "0.12.0"
num = "0.4.1"
num-derive = "0.4.1"
num-traits = "0.2.17"
petgraph = "0.6.4"
